--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
         uses: withastro/action@v3
         with:
           # path: . # リポジトリ内のAstroプロジェクトのルートロケーション。(オプション)
-          path: ./afraid-ablation/
+          path: ./
           # node-version: 18 # サイト構築に使用するNodeのバージョン。デフォルトは18です。（オプション）
           # package-manager: pnpm@latest # 依存関係のインストールとサイトのビルドに使用する Node パッケージマネージャ。ロックファイルに基づいて自動的に検出されます。(オプション)
 
