--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           node-version: '20.x'
       - name: Install dependencies
-        run: pnpm install && pnpm add sharp
+        run: npm install -g pnpm && pnpm install && pnpm add sharp
       - name: Install, build, and upload your site
         uses: withastro/action@v3
         with:
