--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-      - name: Install dependencies
-        run: npm install -g pnpm && pnpm install && pnpm add sharp
+      #- name: Install dependencies
+      #  run: npm install -g pnpm && pnpm install && pnpm add sharp
       - name: Install, build, and upload your site
         uses: withastro/action@v3
         with:
