--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "astro": "^4.16.13",
     "astro-compress": "^2.3.5",
+    "astro-google-analytics": "^1.0.3",
     "astro-icon": "^1.1.1",
     "hastscript": "^9.0.0",
     "markdown-it": "^14.1.0",
